# JakeScript

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
jakescript/: Cargo.toml
jakescript/src/: iter.rs  lib.rs  str.rs
jakescript/src/ast/: block.rs  declaration.rs  expression.rs  identifier.rs  literal.rs  mod.rs  op.rs  statement.rs
jakescript/src/interpreter/: block.rs  declaration.rs  error.rs  expression.rs  global_scope.rs  heap.rs  literal.rs  mod.rs  object.rs  stack.rs  statement.rs  value.rs  vm.rs
jakescript/src/iter/: mod.rs  peek_fallible.rs
jakescript/src/lexer/: error.rs  mod.rs  punctuator.rs  source.rs  test.rs  token.rs
jakescript/src/parser/: block.rs  declaration.rs  error.rs  expression.rs  literal.rs  mod.rs  op.rs  statement.rs  test.rs
jakescript/src/runtime/: array.rs  boolean.rs  (+8 more)
jakescript/tests/: assert_statement.rs  builtin_console_assert.rs  builtin_console_assert_equal.rs  builtin_console_assert_not_reached.rs  const_variable.rs  exit.rs  js_tests.rs  operator_precedence.rs  throw.rs
jakescript/tests-js/: addition.js  array.js  builtin.js  builtin_array.js  builtin_boolean.js  builtin_console.js  builtin_exit.js  builtin_isnan.js  builtin_math.js  builtin_number.js  builtin_string.js  comments.js  do_while_loop.js  do_while_loop_braceless.js  exit_statement.js  for_loop.js  for_loop_braceless.js  function_anon.js  function_call.js  function_call_recursive.js  function_hoisting.js  function_literal_named.js  function_object.js  global_object.js  global_scope.js  global_scope_console.js  global_scope_exit.js  global_scope_math.js  global_scope_string.js  if_statement.js  if_statement_braceless.js  literal_numeric.js  literal_regex.js  literal_string.js  object_properties.js  operator_precedence.js  operators_arithmatic.js  operators_assignment.js  operators_assignment_object_property.js  operators_comparison.js  (+13 more)
(+214 files in other folders)
