[package]
name = "jakescript"
version = "0.1.0"
authors = ["Jake Marsden <jakemarsdenjm@gmail.com>"]
edition = "2018"
resolver = "2"
publish = false

[[bin]]
name = "jakescript-bin"
path = "src/bin.rs"

[lib]
name = "jakescript"
path = "src/lib.rs"

[profile.release]
debug = 1

[dev-dependencies]
walkdir = "2.3"
