[package]
name = "jakescript"
version = "0.1.0"
authors = ["Jake Marsden <jakemarsdenjm@gmail.com>"]
edition = "2021"
publish = false

[[bin]]
name = "jakescript-bin"
path = "src/bin.rs"

[lib]
name = "jakescript"
path = "src/lib.rs"

[profile.release]
debug = 1

[dev-dependencies]
ansi_term = "0.12"
walkdir = "2.3"
