[package]
name = "jakescript"
version = "0.1.0"
authors = ["Jake Marsden <jakemarsdenjm@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
ansi_term = "0.12"
common_macros = "0.1"
fallible-iterator = "0.2"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_test = "1.0"
utf8-chars = "2.0"
walkdir = "2.3"
